--- a/index.html
+++ b/index.html
@@ -2,10 +2,48 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-
+  
     <title>Portifolio Web</title>
+    <style>
+      h1{
+       font-family: monospace;
+         
+      }
+      p{
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      body{
+        background-color: azure;
+      }
+
+      .l1{
+        font-size: x-large;
+      }
+      .l2{
+        font-size: 20px;
+      }
+      .l3{
+        font-size: 25px;
+      }
+      .l4{
+        font-size: 30px;
+      }
+  
+     
+  </style>
 </head>
 <body>
+
+
+
+<h4 id="h4">Índice</h4>
+<ul>
+    <li><a href="#h1">Nome </a> </li>
+    <li><a href="#h2">Descrição</a> </li>
+    <li><a href="#h3">Lista de capacidades </a> </li>
+
+</ul>
 
 <a href="https://www.youtube.com/" target="_blank">Link para site</a> <br>
 <a href="#idImagem">Link para foto</a>
@@ -20,26 +58,20 @@
     <p>
     <em>
         Atualmente tenho 21 anos, sou brasileiro e moro em Porto Alegre RS. <br>
-        Sou apaixonado por jogos e busco evoluir como <strong>desenvolvedor web</strong>.
+        Sou apaixonado por jogos e busco evoluir como <strong> desenvolvedor web</strong>.
     </em>
     </p>
     <h3 id="h3">Lista de capacidades</h3>
     <ol>
-        <li> <strong>Unrel Engine</strong> </li>
-        <li>C+</li>
-        <li>Unity</li>
-        <li>Comunicação</li>
+        <li class="l1"> <strong>Unrel Engine</strong> </li>
+        <li class="l2">C+</li>
+        <li class="l3">Unity</li>
+        <li class="l4">Comunicação</li>
     </ol>
 
    
 
-<h4 id="h4">Índice</h4>
-<ul>
-    <li><a href="#h1">Nome </a> </li>
-    <li><a href="#h2">Descrição</a> </li>
-    <li><a href="#h3">Lista de capacidades </a> </li>
 
-</ul>
 
 
 </body>
