--- a/index.html
+++ b/index.html
@@ -3,35 +3,11 @@
 <head>
     <meta charset="UTF-8">
   
+    <link rel="stylesheet" href="style.css">
+
     <title>Portifolio Web</title>
-    <style>
-      h1{
-       font-family: monospace;
-         
-      }
-      p{
-        font-family: Arial, Helvetica, sans-serif;
-      }
 
-      body{
-        background-color: azure;
-      }
-
-      .l1{
-        font-size: x-large;
-      }
-      .l2{
-        font-size: 20px;
-      }
-      .l3{
-        font-size: 25px;
-      }
-      .l4{
-        font-size: 30px;
-      }
-  
-     
-  </style>
+   
 </head>
 <body>
 
