--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
 
 <a href="https://www.youtube.com/" target="_blank">Link para site</a> <br>
 <a href="#idImagem">Link para foto</a>
-
+<div> 
     <h1 id="h1">Guilherme Ribeiro Lemos Tamiosso</h1>
-
+</div>
+   
+<div>
     <img id="idImagem" src="imagem.jpeg" alt="Foto de Guilherme no Natal" width="400px">
-
+</div>
+   
+<div>[
     <h2 id="h2">
         Descrição
     </h2>
@@ -37,6 +41,9 @@
         Sou apaixonado por jogos e busco evoluir como <strong> desenvolvedor web</strong>.
     </em>
     </p>
+</div>
+
+   
     <h3 id="h3">Lista de capacidades</h3>
     <ol>
         <li class="l1"> <strong>Unrel Engine</strong> </li>
