Adicionado circle na imagem

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img id="idImagem" src="imagem.jpeg" alt="Foto de Guilherme no Natal" width="400px">
 </div>
    
-<div>[
+<div>
     <h2 id="h2">
         Descrição
     </h2>
