--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <h1 id="h1">Guilherme Ribeiro Lemos Tamiosso</h1>
 </div>
    
-<div>
+<div id="divIdImagem">
     <img id="idImagem" src="imagem.jpeg" alt="Foto de Guilherme no Natal" width="400px">
 </div>
    
-<div>
+<div id="divIdDescricao">
     <h2 id="h2">
         Descrição
     </h2>
@@ -43,7 +43,7 @@
     </p>
 </div>
 
-   
+<div id="divIdListaDeCapacidades">
     <h3 id="h3">Lista de capacidades</h3>
     <ol>
         <li class="l1"> <strong>Unrel Engine</strong> </li>
@@ -51,9 +51,8 @@
         <li class="l3">Unity</li>
         <li class="l4">Comunicação</li>
     </ol>
-
+</div>
    
-
 
 
 
