Adicionado padd, margins e italico na lista

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <div id="divIdListaDeCapacidades">
     <h3 id="h3">Lista de capacidades</h3>
-    <ol>
-        <li class="l1"> <strong>Unrel Engine</strong> </li>
-        <li class="l2">C+</li>
-        <li class="l3">Unity</li>
-        <li class="l4">Comunicação</li>
+    <ol id="idOlCapacidade">
+        <li > <strong>Unrel Engine</strong> </li>
+        <li >C+</li>
+        <li >Unity</li>
+        <li >Comunicação</li>
     </ol>
 </div>
    
